# proxmox-backup

./: .gitignore  Cargo.toml  Makefile  README.rst  TODO.rst  build.rs  defines.mk
.cargo/: config
debian/: api-test-server.bash-completion  api-test-server.service  backup-client.bash-completion  catar.bash-completion  changelog  control  control.in  copyright  debcargo.toml  dirs  install  lintian-overrides  pbs.bash-completion  pmt.bc  pmtx.bc  postinst  prerm  proxmox-backup-client.bash-completion  proxmox-backup-client.install  proxmox-backup-debug.bash-completion  proxmox-backup-debug.bc  proxmox-backup-debug.install  proxmox-backup-docs.install  proxmox-backup-docs.link  proxmox-backup-docs.links  proxmox-backup-docs.lintian-overrides  proxmox-backup-file-restore.bc  proxmox-backup-file-restore.install  proxmox-backup-file-restore.postinst  proxmox-backup-manager.bash-completion  proxmox-backup-proxy.service  proxmox-backup-server.bash-completion  proxmox-backup-server.install  proxmox-backup-server.maintscript  proxmox-backup-server.udev  proxmox-backup.bash-completion  proxmox-backup.service  proxmox-file-restore.bash-completion  proxmox-file-restore.install  proxmox-file-restore.triggers  (+4 more)
docs/: GFDL.rst  Makefile  admin-guide.rst  administration-guide.rst  backup-client.rst  backup-protocol.rst  calendarevents.rst  conf.py  (+43 more)
pbs-api-types/: Cargo.toml
pbs-api-types/src/: acl.rs  ad.rs  common_regex.rs  crypto.rs  datastore.rs  file_restore.rs  human_byte.rs  jobs.rs  key_derivation.rs  ldap.rs  lib.rs  maintenance.rs  metrics.rs  network.rs  node.rs  openid.rs  remote.rs  traffic_control.rs  upid.rs  user.rs  userid.rs  zfs.rs
pbs-api-types/src/tape/: changer.rs  device.rs  drive.rs  media.rs  media_location.rs  media_pool.rs  media_status.rs  mod.rs
pbs-api-types/tests/: group_filter_tests.rs
pbs-client/: Cargo.toml
pbs-client/src/: backup_reader.rs  backup_repo.rs  backup_specification.rs  backup_writer.rs  catalog_shell.rs  chunk_stream.rs  dynamic_index.rs  http_client.rs  lib.rs  merge_known_chunks.rs  pipe_to_stream.rs  pxar_backup_stream.rs  remote_chunk_reader.rs  task_log.rs  vsock_client.rs
pbs-client/src/pxar/: create.rs  dir_stack.rs  extract.rs  flags.rs  fuse.rs  metadata.rs  mod.rs  tools.rs
pbs-client/src/tools/: key_source.rs  mod.rs
pbs-config/: Cargo.toml
pbs-config/src/: acl.rs  cached_user_info.rs  config_version_cache.rs  datastore.rs  domains.rs  drive.rs  key_config.rs  lib.rs  media_pool.rs  memcom.rs  metrics.rs  notifications.rs  prune.rs  remote.rs  sync.rs  tape_encryption_keys.rs  tape_job.rs  token_shadow.rs  traffic_control.rs  user.rs  verify.rs
pbs-config/src/network/: helper.rs  lexer.rs  mod.rs  parser.rs
pbs-datastore/: Cargo.toml
pbs-datastore/examples/: ls-snapshots.rs
pbs-datastore/src/: backup_info.rs  cached_chunk_reader.rs  catalog.rs  checksum_reader.rs  checksum_writer.rs  chunk_stat.rs  chunk_store.rs  crypt_config.rs  crypt_reader.rs  crypt_writer.rs  data_blob.rs  data_blob_reader.rs  data_blob_writer.rs  datastore.rs  dynamic_index.rs  file_formats.rs  fixed_index.rs  hierarchy.rs  index.rs  key_derivation.rs  lib.rs  local_chunk_reader.rs  manifest.rs  paperkey.rs  prune.rs  read_chunk.rs  snapshot_reader.rs  store_progress.rs  task.rs  task_tracking.rs
pbs-fuse-loop/: Cargo.toml
pbs-fuse-loop/src/: fuse_loop.rs  lib.rs  loopdev.rs
pbs-key-config/: Cargo.toml
pbs-pxar-fuse/: Cargo.toml
pbs-pxar-fuse/src/: lib.rs
pbs-runtime/: Cargo.toml
pbs-runtime/src/: lib.rs
pbs-tape/: Cargo.toml
pbs-tape/src/: blocked_reader.rs  blocked_writer.rs  emulate_tape_reader.rs  emulate_tape_writer.rs  lib.rs  linux_list_drives.rs  sg_pt_changer.rs  sg_tape.rs  sgutils2.rs  tape_write.rs
pbs-tape/src/sg_tape/: device_status.rs  encryption.rs  mam.rs  report_density.rs  tape_alert_flags.rs  volume_statistics.rs
pbs-tools/: Cargo.toml
pbs-tools/src/: acl.rs  async_lru_cache.rs  auth.rs  blocking.rs  borrow.rs  broadcast_future.rs  cert.rs  cli.rs  command.rs  compression.rs  crypt.rs  crypt_config.rs  fd.rs  format.rs  fs.rs  io.rs  json.rs  lib.rs  logrotate.rs  lru_cache.rs  nom.rs  ops.rs  percent_encoding.rs  process_locker.rs  sha.rs  str.rs  stream.rs  sys.rs  task.rs  ticket.rs  xattr.rs  zip.rs
pbs-tools/src/sync/: mod.rs  std_channel_writer.rs
pbs-tools/src/tokio/: mod.rs
proxmox-backup-client/: Cargo.toml
proxmox-backup-client/src/: benchmark.rs  catalog.rs  key.rs  main.rs  mount.rs  namespace.rs  snapshot.rs  task.rs
proxmox-backup-debug/: Cargo.toml
proxmox-backup-debug/src/: inspect.rs  main.rs  recover.rs
proxmox-file-restore/: Cargo.toml
proxmox-file-restore/src/: block_driver.rs  block_driver_qemu.rs  cpio.rs  main.rs  qemu_helper.rs
proxmox-protocol/: Cargo.toml  proxmox-protocol.h
proxmox-protocol/src/: c_chunker.rs  c_client.rs  c_connector.rs  chunk_stream.rs  chunker.rs  client.rs  common.rs  connect.rs  lib.rs  protocol.rs  server.rs  tools.rs  types.rs
proxmox-rest-server/: Cargo.toml
proxmox-rest-server/examples/: minimal-rest-server.rs
proxmox-rest-server/src/: api_config.rs  command_socket.rs  compression.rs  daemon.rs  environment.rs  file_logger.rs  formatter.rs  h2service.rs  lib.rs  rest.rs  state.rs  worker_task.rs
proxmox-restore-daemon/: Cargo.toml
proxmox-restore-daemon/src/: main.rs
proxmox-restore-daemon/src/proxmox_restore_daemon/: api.rs  auth.rs  disk.rs  mod.rs  watchdog.rs
proxmox-rrd/: Cargo.toml
proxmox-rrd-api-types/: Cargo.toml
proxmox-rrd-api-types/src/: lib.rs
proxmox-rrd/examples/: prrd.rs
proxmox-rrd/src/: cache.rs  lib.rs  rrd.rs  rrd_v1.rs
proxmox-rrd/src/cache/: journal.rs  rrd_map.rs
proxmox-rrd/tests/: file_format_test.rs
proxmox-rrd/tests/testdata/: cpu.rrd_v1  cpu.rrd_v2
proxmox-systemd/: Cargo.toml
proxmox-systemd/src/: daily_duration.rs  lib.rs  parse_time.rs  time.rs  unit.rs
pxar-bin/: Cargo.toml
pxar-bin/src/: main.rs
pxar-bin/tests/: pxar.rs
qemu-io/: Cargo.toml
qemu-io/src/: aio_context.rs  lib.rs  util.rs  with_aio_context.rs
qemu-io/src/aio_context/: standalone.rs
(+742 files in other folders)
