[package]
name = "proxmox-backup"
version = "2.0.14"
authors = [
    "Dietmar Maurer <dietmar@proxmox.com>",
    "Dominik Csapak <d.csapak@proxmox.com>",
    "Christian Ebner <c.ebner@proxmox.com>",
    "Fabian Grünbichler <f.gruenbichler@proxmox.com>",
    "Stefan Reiter <s.reiter@proxmox.com>",
    "Thomas Lamprecht <t.lamprecht@proxmox.com>",
    "Wolfgang Bumiller <w.bumiller@proxmox.com>",
    "Proxmox Support Team <support@proxmox.com>",
]
edition = "2018"
license = "AGPL-3"
description = "Proxmox Backup"
homepage = "https://www.proxmox.com"

exclude = [ "build", "debian", "tests/catar_data/test_symlink/symlink1"]

[workspace]
members = [
    "pbs-buildcfg",
    "pbs-client",
    "pbs-config",
    "pbs-datastore",
    "pbs-fuse-loop",
    "pbs-runtime",
    "proxmox-rest-server",
    "proxmox-rrd",
    "proxmox-systemd",
    "pbs-tape",
    "pbs-tools",

    "proxmox-backup-banner",
    "proxmox-backup-client",
    "proxmox-file-restore",
    "proxmox-restore-daemon",
    "pxar-bin",
]

[lib]
name = "proxmox_backup"
path = "src/lib.rs"

[dependencies]
apt-pkg-native = "0.3.2"
base64 = "0.12"
bitflags = "1.2.1"
bytes = "1.0"
cidr = "0.2.1"
crc32fast = "1"
endian_trait = { version = "0.6", features = ["arrays"] }
env_logger = "0.7"
flate2 = "1.0"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
h2 = { version = "0.3", features = [ "stream" ] }
handlebars = "3.0"
hex = "0.4.3"
http = "0.2"
hyper = { version = "0.14", features = [ "full" ] }
lazy_static = "1.4"
libc = "0.2"
log = "0.4"
nix = "0.19.1"
num-traits = "0.2"
once_cell = "1.3.1"
openssl = "0.10"
pam = "0.7"
pam-sys = "0.5"
percent-encoding = "2.1"
regex = "1.2"
rustyline = "7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
siphasher = "0.3"
syslog = "4.0"
tokio = { version = "1.6", features = [ "fs", "io-util", "io-std", "macros", "net", "parking_lot", "process", "rt", "rt-multi-thread", "signal", "time" ] }
tokio-openssl = "0.6.1"
tokio-stream = "0.1.0"
tokio-util = { version = "0.6", features = [ "codec", "io" ] }
tower-service = "0.3.0"
udev = "0.4"
url = "2.1"
#valgrind_request = { git = "https://github.com/edef1c/libvalgrind_request", version = "1.1.0", optional = true }
walkdir = "2"
webauthn-rs = "0.2.5"
xdg = "2.2"
nom = "5.1"
crossbeam-channel = "0.5"

# Used only by examples currently:
zstd = { version = "0.6", features = [ "bindgen" ] }

pathpatterns = "0.1.2"
pxar = { version = "0.10.1", features = [ "tokio-io" ] }

proxmox = { version = "0.15.0", features = [ "sortable-macro" ] }
proxmox-http = { version = "0.5.4", features = [ "client", "http-helpers", "websocket" ] }
proxmox-io = "1"
proxmox-lang = "1"
proxmox-router = { version = "1.1", features = [ "cli" ] }
proxmox-schema = { version = "1", features = [ "api-macro" ] }
proxmox-section-config = "1"
proxmox-tfa = { version = "1", features = [ "u2f" ] }
proxmox-time = "1"
proxmox-uuid = "1"
proxmox-shared-memory = "0.1.1"

proxmox-acme-rs = "0.3"
proxmox-apt = "0.8.0"
proxmox-openid = "0.8.1"

pbs-api-types = { path = "pbs-api-types" }
pbs-buildcfg = { path = "pbs-buildcfg" }
pbs-client = { path = "pbs-client" }
pbs-config = { path = "pbs-config" }
pbs-datastore = { path = "pbs-datastore" }
pbs-runtime = { path = "pbs-runtime" }
proxmox-rest-server = { path = "proxmox-rest-server" }
proxmox-rrd = { path = "proxmox-rrd" }
proxmox-systemd = { path = "proxmox-systemd" }
pbs-tools = { path = "pbs-tools" }
pbs-tape = { path = "pbs-tape" }

# Local path overrides
# NOTE: You must run `cargo update` after changing this for it to take effect!
[patch.crates-io]
#proxmox = { path = "../proxmox/proxmox" }
#proxmox-http = { path = "../proxmox/proxmox-http" }
#pxar = { path = "../pxar" }

[features]
default = []
#valgrind = ["valgrind_request"]
