[package]
name = "pbs-api-types"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "general API type helpers for PBS"

[dependencies]
anyhow = "1.0"
hex = "0.4.3"
lazy_static = "1.4"
percent-encoding = "2.1"
regex = "1.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_plain = "1"

proxmox-lang = "1.0.0"
proxmox-schema = { version = "1.2.1", features = [ "api-macro" ] }
proxmox-serde = "0.1"
proxmox-time = "1.1.1"
proxmox-uuid = { version = "1.0.0", features = [ "serde" ] }
