[package]
name = "pbs-api-types"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "general API type helpers for PBS"

[dependencies]
anyhow = "1.0"
hex = "0.4.3"
lazy_static = "1.4"
percent-encoding = "2.1"
regex = "1.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_plain = "1"

proxmox-lang.workspace=true
proxmox-schema = { workspace = true, features = [ "api-macro" ] }
proxmox-serde.workspace = true
proxmox-time.workspace = true
proxmox-uuid = { workspace = true, features = [ "serde" ] }
