[package]
name = "pbs-client"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "The main proxmox backup client crate"

[dependencies]
anyhow = "1.0"
bitflags = "1.2.1"
bytes = "1.0"
futures = "0.3"
hex = "0.4.3"
h2 = { version = "0.3", features = [ "stream" ] }
http = "0.2"
hyper = { version = "0.14", features = [ "full" ] }
lazy_static = "1.4"
libc = "0.2"
nix = "0.24"
log = "0.4"
openssl = "0.10"
percent-encoding = "2.1"
pin-project-lite = "0.2"
regex = "1.5"
rustyline = "9"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.6", features = [ "fs", "signal" ] }
tokio-stream = "0.1.0"
tower-service = "0.3.0"
xdg = "2.2"
tar = "0.4"

pathpatterns.workspace = true

proxmox-async.workspace = true
proxmox-compression.workspace = true
proxmox-http.workspace = true
proxmox-io = { workspace = true, features = [ "tokio" ] }
proxmox-lang.workspace = true
proxmox-router = { workspace = true, features = [ "cli", "server" ] }
proxmox-schema.workspace = true
proxmox-time.workspace = true
proxmox-sys.workspace = true

pxar.workspace = true

pbs-api-types.workspace = true
pbs-buildcfg.workspace = true
pbs-datastore.workspace = true
pbs-tools.workspace = true
