[package]
name = "pbs-config"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "Configuration file management for PBS"

[dependencies]
anyhow = "1.0"
hex = "0.4.3"
lazy_static = "1.4"
libc = "0.2"
nix = "0.24"
once_cell = "1.3.1"
openssl = "0.10"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

proxmox-lang.workspace=true
proxmox-metrics.workspace = true
proxmox-router = { workspace = true, default-features = false }
proxmox-schema.workspace = true
proxmox-section-config.workspace = true
proxmox-serde.workspace = true
proxmox-shared-memory.workspace = true
proxmox-sys = { workspace = true, features = [ "acl", "crypt", "timer" ] }
proxmox-time.workspace = true

pbs-api-types.workspace = true
pbs-buildcfg.workspace = true
pbs-tools.workspace = true
