[package]
name = "pbs-datastore"
version = "0.1.0"
authors = ["Proxmox Support Team <support@proxmox.com>"]
edition = "2021"
description = "low level pbs data storage access"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
crc32fast = "1"
endian_trait = { version = "0.6", features = [ "arrays" ] }
futures = "0.3"
hex = { version = "0.4.3", features = [ "serde" ] }
lazy_static = "1.4"
libc = "0.2"
log = "0.4.17"
nix = "0.24"
openssl = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.6", features = [] }
walkdir = "2"
zstd = { version = "0.6", features = [ "bindgen" ] }

pathpatterns = "0.1.2"
pxar = "0.10.2"

proxmox-borrow = "1"
proxmox-io = "1"
proxmox-lang = "1.1"
proxmox-schema = { version = "1.3.1", features = [ "api-macro" ] }
proxmox-serde = { version = "0.1.1", features = [ "serde_json" ] }
proxmox-time = "1"
proxmox-uuid = "1"
proxmox-sys = "0.4.1"

pbs-api-types = { path = "../pbs-api-types" }
pbs-buildcfg = { path = "../pbs-buildcfg" }
pbs-tools = { path = "../pbs-tools" }
pbs-config = { path = "../pbs-config" }
