[package]
name = "pbs-datastore"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "low level pbs data storage access"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
crc32fast = "1"
endian_trait = { version = "0.6", features = [ "arrays" ] }
futures = "0.3"
hex = { version = "0.4.3", features = [ "serde" ] }
lazy_static = "1.4"
libc = "0.2"
log = "0.4.17"
nix = "0.24"
openssl = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.6", features = [] }
walkdir = "2"
zstd = { version = "0.6", features = [ "bindgen" ] }

pathpatterns.workspace = true
pxar.workspace = true

proxmox-borrow.workspace = true
proxmox-io.workspace = true
proxmox-lang.workspace=true
proxmox-schema = { workspace = true, features = [ "api-macro" ] }
proxmox-serde = { workspace = true, features = [ "serde_json" ] }
proxmox-time.workspace = true
proxmox-uuid.workspace = true
proxmox-sys.workspace = true

pbs-api-types.workspace = true
pbs-buildcfg.workspace = true
pbs-tools.workspace = true
pbs-config.workspace = true
