[package]
name = "pbs-fuse-loop"
version = "0.1.0"
authors = ["Proxmox Support Team <support@proxmox.com>"]
edition = "2018"
description = "fuse and loop device helpers"

[dependencies]
anyhow = "1.0"
futures = "0.3"
lazy_static = "1.4"
libc = "0.2"
nix = "0.24"
log = "0.4"
regex = "1.5"
tokio = { version = "1.6", features = ["io-util"] }

proxmox-time = "1"
proxmox-fuse = "0.1.3"
proxmox-sys = "0.4"
