[package]
name = "pbs-pxar-fuse"
version = "0.1.0"
edition.workspace = true
description = "pxar fuse file system code"

[dependencies]
anyhow = "1.0"
futures = "0.3"
libc = "0.2"
log = "0.4"
tokio = "1.6"

proxmox-fuse.workspace = true
proxmox-io.workspace = true
proxmox-lang.workspace=true
proxmox-sys.workspace = true

pxar.workspace = true
