[package]
name = "pbs-tape"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "LTO tape support"

[dependencies]
lazy_static = "1.4"
libc = "0.2"
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"
endian_trait = { version = "0.6", features = ["arrays"] }
hex = "0.4.3"
nix = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitflags = "1.2.1"
regex = "1.5"
udev = "0.4"

proxmox-io.workspace = true
proxmox-lang.workspace=true
# api-macro is only used by the binaries, so maybe we should split them out
proxmox-schema = { workspace = true, features = [ "api-macro" ] }
proxmox-time.workspace = true
proxmox-uuid.workspace = true

# router::cli is only used by binaries, so maybe we should split them out
proxmox-router = { workspace = true, features = ["cli", "server"] }
proxmox-sys.workspace = true

pbs-api-types.workspace = true
pbs-config.workspace = true
