[package]
name = "pbs-tape"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "LTO tape support"

[dependencies]
lazy_static.workspace = true
libc.workspace = true
log.workspace = true
anyhow.workspace = true
thiserror.workspace = true
endian_trait.workspace = true
hex.workspace = true
nix.workspace = true
serde.workspace = true
serde_json.workspace = true
bitflags.workspace = true
regex.workspace = true
udev.workspace = true

proxmox-io.workspace = true
proxmox-lang.workspace=true
# api-macro is only used by the binaries, so maybe we should split them out
proxmox-schema = { workspace = true, features = [ "api-macro" ] }
proxmox-time.workspace = true
proxmox-uuid.workspace = true

# router::cli is only used by binaries, so maybe we should split them out
proxmox-router = { workspace = true, features = ["cli", "server"] }
proxmox-sys.workspace = true

pbs-api-types.workspace = true
pbs-config.workspace = true
