[package]
name = "pbs-tools"
version = "0.1.0"
authors = ["Proxmox Support Team <support@proxmox.com>"]
edition = "2021"
description = "common tools used throughout pbs"

# This must not depend on any subcrates more closely related to pbs itself.
[dependencies]
anyhow = "1.0"
base64 = "0.13"
bytes = "1.0"
crc32fast = "1"
endian_trait = { version = "0.6", features = ["arrays"] }
flate2 = "1.0"
foreign-types = "0.3"
futures = "0.3"
hex = "0.4.3"
lazy_static = "1.4"
libc = "0.2"
log = "0.4.17"
nix = "0.24"
nom = "7"
openssl = "0.10"
percent-encoding = "2.1"
regex = "1.5"
serde = "1.0"
serde_json = "1.0"
# rt-multi-thread is required for block_in_place
tokio = { version = "1.6", features = [ "fs", "io-util", "rt", "rt-multi-thread", "sync" ] }
url = "2.1"
walkdir = "2"
zstd = { version = "0.6", features = [ "bindgen" ] }

#proxmox = { version = "0.15.3", default-features = false, features = [ "tokio" ] }
proxmox-async = "0.4"
proxmox-io = { version = "1", features = [ "tokio" ] }
proxmox-lang = { version = "1.1" }
proxmox-time = { version = "1" }
proxmox-sys = "0.4.1"

pbs-buildcfg = { path = "../pbs-buildcfg" }
pbs-api-types = { path = "../pbs-api-types" }

[dev-dependencies]
tokio = { version = "1.6", features = [ "macros" ] }
