[package]
name = "pbs-tools"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "common tools used throughout pbs"

# This must not depend on any subcrates more closely related to pbs itself.
[dependencies]
anyhow.workspace = true
base64.workspace = true
bytes.workspace = true
crc32fast.workspace = true
endian_trait.workspace = true
flate2.workspace = true
foreign-types.workspace = true
futures.workspace = true
hex.workspace = true
lazy_static.workspace = true
libc.workspace = true
log.workspace = true
nix.workspace = true
nom.workspace = true
openssl.workspace = true
regex.workspace = true
serde_json.workspace = true
# rt-multi-thread is required for block_in_place
tokio = { workspace = true, features = [ "fs", "io-util", "rt", "rt-multi-thread", "sync" ] }
url.workspace = true
walkdir.workspace = true
zstd.workspace = true

proxmox-async.workspace = true
proxmox-io = { workspace = true, features = [ "tokio" ] }
proxmox-human-byte.workspace = true
proxmox-lang.workspace=true
proxmox-sys.workspace = true
proxmox-time.workspace = true

pbs-api-types.workspace = true
pbs-buildcfg.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = [ "macros" ] }
