[package]
name = "proxmox-backup-client"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
futures = "0.3"
hyper = { version = "0.14", features = [ "full" ] }
libc = "0.2"
log = "0.4"
nix = "0.24"
openssl = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.6", features = [ "rt", "rt-multi-thread" ] }
tokio-stream = "0.1.0"
tokio-util = { version = "0.7", features = [ "codec", "io" ] }
xdg = "2.2"
zstd = { version = "0.6", features = [ "bindgen" ] }

pathpatterns.workspace = true
pxar.workspace = true

proxmox-async.workspace = true
proxmox-fuse.workspace = true
proxmox-io.workspace = true
proxmox-router = { workspace = true, features = [ "cli" ] }
proxmox-schema = { workspace = true, features = [ "api-macro" ] }
proxmox-sys = { workspace = true,  features = [ "sortable-macro" ] }
proxmox-time.workspace = true

pbs-api-types.workspace = true
pbs-buildcfg.workspace = true
pbs-client.workspace = true
pbs-config.workspace = true
pbs-datastore.workspace = true
pbs-fuse-loop.workspace = true
pbs-pxar-fuse.workspace = true
pbs-tools.workspace = true
